source/potatoTheme.css
body {
    height: 100vh;
    /* background-color: #b9e1f0;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#86ffff), to(#fff));
    background-image: linear-gradient(180deg, #86ffff, #fff); */
    text-align: center;
    color: #333;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 3em;
}

body[data-light-mode=potato]{
    height: 100vh;
    background-color: #b9e1f0;
    background-image: -webkit-gradient(linear, left top, left bottom, from(#86ffff), to(#fff));
    background-image: linear-gradient(180deg, #86ffff, #fff);
    text-align: center;
    color: #333;
}

body[data-light-mode=dark] {
    background-color: #333333;
    background-image: none;
}

body[data-light-mode=light] {
    background-color: white;
    background-image: none;
}

p {
    margin-bottom: 0px;
}

/*---------------------------------
         Main Page Display
---------------------------------*/
.content-wrapper {
    position: absolute;
    left: 0%;
    top: 0%;
    right: 0%;
    /* margin: 0 30%; */
    bottom: auto;
    height: inherit;
    /* border-style: dashed;
    border-color: red; */
}

.title {
    display: block;
    margin-top: 40px;
    margin-bottom: 20px;
    text-shadow: 1px 1px 1px #000;
    font-family: sans-serif;
}

.phase {
    display: inline-block;
    margin: 20px 0;
    text-shadow: 1px 1px 1px #000;
}

#settings-icon {
    margin-left: 80px;
}

#settings-icon:hover {
    cursor: pointer;
}
.circle {
    width: 200px;
    height: 200px;
    margin-right: auto;
    margin-left: auto;
    border: 5px solid transparent;
    border-radius: 50%;
    background-color: #ff0;
    box-shadow: 0 0 20px 20px #ff0;
    border-radius: 50%;
}

.timer {
    margin: 40px auto;
    padding: 25px 0px;
    font-size: 50px;
    text-shadow: 1px 1px 1px #000;
    font-weight: bold;
}

.image {
    display: inline-block;
    cursor: pointer;
}

.button-wrapper {
    margin-top: 50px;
}

.reset {
    display: inline-block;
    width: 150px;
    height: 75px;
    margin-right: 10px;
}

.start-stop {
    display: inline-block;
    width: 150px;
    height: 75px;
    margin-left: 10px;
}
/*---------------------------------
         Settings Menu Display
---------------------------------*/
#settings-menu {
    position: absolute;
    left: 0%;
    top: 0%;
    right: 0%;
    bottom: auto;
    display: none; /* Change block/none */
    height: 90vh;
    margin-top: 15vh;
    border: 5px solid #000;
    border-radius: 50px 50px 0 0;
    background-color: white;
    background-image: -webkit-gradient(linear, left bottom, left top, from(#eee), to(#fff));
    background-image: linear-gradient(0deg, #eee, #fff);
    box-shadow: inset 0 -1px 10px 3px #6d6d6d;
}

#settings-menu p {
    margin-top: 20px;
}

#close {
    position: absolute;
    left: auto;
    top: 0%;
    right: 0%;
    bottom: auto;
    padding-right: 20px;
    font-size: 30px;
    font-weight: bold;
    cursor: pointer;
}

button {
    margin: 0 10px;
    padding: 10px 15px;
    border: 2px solid #000;
    border-radius: 50px;
    background-color: #333;
    /* background-color: #999; For dark mode */
    font-size: 24px;
    font-weight: bold;
    color: #fff;
    cursor: pointer;
}

button[mode=light] {
    margin: 0 10px;
    padding: 10px 15px;
    border: 2px solid #000;
    border-radius: 50px;
    background-color: #333;
    /* background-color: #999; For dark mode */
    font-size: 24px;
    font-weight: bold;
    color: #fff;
    cursor: pointer;
}

button[mode=potato] {
    margin: 0 10px;
    padding: 10px 15px;
    border: 2px solid #000;
    border-radius: 50px;
    background-color: #333;
    /* background-color: #999; For dark mode */
    font-size: 24px;
    font-weight: bold;
    color: #fff;
    cursor: pointer;
}

button[mode=dark] {
    margin: 0 10px;
    padding: 10px 15px;
    border: 2px solid #fff;
    border-radius: 50px;
    background-color: #999;
    font-size: 24px;
    font-weight: bold;
    color: #fff;
    cursor: pointer;
}

button:hover {
    background-color: rgb(100, 100, 100);
}

.form-container {
    margin-top: 20px;
    margin-left: auto;
    margin-right: auto;
    width: 300px;
    text-align: right;
}

.field-label {
    font-size: 24px;
}

input {
    text-align: center;
    font-size: 34px;
}
.custom-time {
    width: 125px;
}

#volume {
    display: inline-block;
    width: 75px;
}

.volume-icon {
    display: inline-block;
    width: 40px;
}

form input {
    border-radius: 20px;
    border-style: solid black;
    border-width: 5px;
}

#taskAdder{
    margin-top: 20px;
    font-size: 16px;
}

